api/swim_form/src/tests/derive/form/newtype_empty_struct.stderr
error: Cannot apply `newtype` attribute to an empty struct
 --> $DIR/src/tests/derive/form/newtype_empty_struct.rs:4:14
  |
4 |     #[derive(Form)]
  |              ^^^^
